# ai-newsletter

./: .dockerignore  .env.example  .gitignore  BUILD_GUIDE.md  Dockerfile  README.md  classifier.py  config.yaml  doc.md  main.py  pyproject.toml  requirements.txt  scheduler.py
.github/workflows/: test.yml  tracker-cron.yml
collectors/: __init__.py  arxiv_c.py  bluesky.py  hn.py  reddit_c.py  rss.py  x_twitter.py
data/: news.db
docs/superpowers/specs/: 2026-05-26-github-actions-sqlite-design.md  2026-05-27-bookmarking-design.md  2026-05-27-digest-exporter-design.md  2026-05-27-rag-qa-assistant-design.md  2026-05-27-search-and-filtering-design.md  2026-06-05-classifier-sources-fix-design.md
scripts/: backward_scan.py  com.ainews.tracker.plist  com.ainews.web.plist  export_digest.py  export_html.py  install.sh  install_launchd.sh  run_web.sh  setup_rsshub.md
storage/: chat.py  db.py  exporter.py
tests/: test_bookmarks.py  test_chat.py  test_exporter.py  test_search.py
web/: app.py
web/static/: style.css
web/templates/: digest_template.html  index.html
