[project]
name = "ai-news-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40.0",
    "arxiv>=2.1.3",
    "atproto>=0.0.55",
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "lxml>=5.3.0",
    "openai>=1.50.0",
    "praw>=7.7.1",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
